crates/swc/tests/tsc-references/types/primitives/void/invalidVoidValues/input.ts/es5.1.normal/output.js
function _classCallCheck(instance, Constructor) {
    if (!(instance instanceof Constructor)) {
        throw new TypeError("Cannot call a class as a function");
    }
}
var x;
x = 1;
x = '';
x = true;
var E1;
(function(E) {
    E[E["A"] = 0] = "A";
})(E1 || (E1 = {
}));
x = E1;
x = E1.A;
var C = function C() {
    "use strict";
    _classCallCheck(this, C);
};
var a1;
x = a1;
var b;
x = b;
x = {
    f: function() {
    }
};
var M1;
(function(M) {
    M.x = 1;
})(M1 || (M1 = {
}));
x = M1;
function f(a) {
    x = a;
}
x = f;
